<resources>
    <string name="app_name">Onyx Browser</string>
    <string name="search">Search</string>
    <string name="search_or_type_url">Search or type URL</string>
    <string name="clear_search">Clear search</string>
    <string name="voice_search">Voice search</string>
    <string name="home">Home</string>
    <string name="switch_search_engine">Switch search engine</string>
    <string name="tabs">Tabs</string>
    <string name="menu">Menu</string>
    <string name="tagline_fast_and_private">Fast and Private</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="incognito">Incognito</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="download">Download</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="normal_tabs">Normal</string>
    <string name="incognito_tabs">Incognito</string>
    <string name="new_tab">New Tab</string>
    <string name="new_incognito_tab">New Incognito Tab</string>
    <string name="close_all_tabs">Close All Tabs</string>
    <string name="close_tab">Close tab</string>
    <string name="delete_browsing_history">Delete Browsing History</string>
    <string name="confirm_clear_history">Clear all browsing history?</string>
    <string name="confirm_close_all_tabs">Close all open tabs?</string>
    <string name="close_all_tabs_title">Close all tabs?</string>
    <string name="close_all_incognito_tabs_title">Close all incognito tabs?</string>
    <string name="close_all_tabs_desc">Are you sure you want to close all %1$d open tabs? Any unsaved form data or active web pages will be closed.</string>
    <string name="close_all_incognito_tabs_desc">Are you sure you want to close all %1$d incognito tabs? Your incognito browsing session will be cleared.</string>
    <string name="close_single_tab_desc">Are you sure you want to close this tab?</string>
    <string name="tabs_to_be_closed_count">%1$d tabs will be closed</string>
    <string name="single_tab_to_be_closed_count">1 tab will be closed</string>
    <string name="close_all_action">Close All</string>
    <string name="no_tabs_to_close">No open tabs to close</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="set_as_default_browser">Set as Default Browser</string>
    <string name="set_default_desc">Browse faster with built-in native adblocking</string>
    <string name="desktop_site">Desktop Site</string>
    <string name="find_in_page">Find in Page</string>
    <string name="add_bookmark">Add to Bookmarks</string>
    <string name="bookmark_added">Page bookmarked</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="settings">Settings</string>
    <string name="pref_category_search">Search Engine</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_adblock">Adblocker Settings</string>
    <string name="pref_category_download">Download Settings</string>
    <string name="pref_category_media">Media &amp; Playback</string>
    <string name="background_play">Background Play</string>
    <string name="background_play_desc">Keep audio and video streams playing when app is in background or screen is off</string>
    <string name="picture_in_picture">Picture-in-Picture (PiP)</string>
    <string name="picture_in_picture_desc">Automatically display video in a floating window over other apps</string>
    <string name="display_over_apps">Display over other apps</string>
    <string name="display_over_apps_desc">System floating window &amp; Picture-in-Picture permissions</string>
    <string name="theme_title">Theme</string>
    <string name="theme_subtitle">Choose how Onyx Browser looks to you</string>
    <string name="theme_system">System Default</string>
    <string name="theme_system_desc">Follow device dark mode settings</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_dark_desc">Google Dark mode for low light</string>
    <string name="theme_light">Light</string>
    <string name="theme_light_desc">Clean, bright display for daytime</string>
    <string name="adblock_master_toggle">Enable Ad &amp; Tracker Blocking</string>
    <string name="adblock_master_desc">Block ads, malicious trackers, and unwanted scripts</string>
    <string name="cosmetic_filtering_toggle">Cosmetic Element Hiding</string>
    <string name="cosmetic_filtering_desc">Inject element-hiding CSS to collapse empty ad placeholders</string>
    <string name="blocked_requests_counter">Blocked requests: %d</string>
    <string name="update_filters">Update Filter Rules</string>
    <string name="update_filters_desc">Download the latest EasyList and AdGuard rule definitions</string>
    <string name="filters_updated_success">Filter rules updated successfully!</string>
    <string name="filters_update_failed">Failed to update filter rules. Check connection.</string>
    <string name="ask_before_download">Ask before download</string>
    <string name="ask_before_download_desc">Show routing dialog to choose internal or external downloader</string>
    <string name="download_prompt_title">Download File</string>
    <string name="download_button">Download</string>
    <string name="external_downloader_button">External Downloader</string>
    <string name="file_size_unknown">Size unknown</string>
    <string name="search_history">Search history…</string>
    <string name="no_history">No browsing history yet</string>
    <string name="no_bookmarks">No bookmarks saved yet</string>
    <string name="no_downloads">No downloads yet</string>
    <string name="clear_browsing_data">Clear Browsing Data</string>
    <string name="delete_browsing_data">Delete browsing data</string>
    <string name="time_range_last_15_mins">Last 15 minutes</string>
    <string name="time_range_last_hour">Last hour</string>
    <string name="time_range_last_24_hours">Last 24 hours</string>
    <string name="time_range_last_7_days">Last 7 days</string>
    <string name="time_range_last_4_weeks">Last 4 weeks</string>
    <string name="time_range_all_time">All time</string>
    <string name="browsing_history_preview">Browsing history: %1$d sites%2$s</string>
    <string name="open_tabs_preview">Open tabs: %1$d tabs%2$s</string>
    <string name="cookies_cache_warning">Cookies, cache, and other site data will be cleared for this period.</string>
    <string name="clear_data">Clear Data</string>
    <string name="browsing_data_cleared">Browsing data cleared</string>
    <string name="translate_to">Translate to %s</string>
    <string name="translate_original">Original</string>
    <string name="translate_translated">Translated</string>
    <string name="translating">Translating…</string>
    <string name="translation_failed">Translation failed</string>
    <string name="select_translation_language">Select Translation Language</string>
    <string name="add_to_home_screen">Add to Home screen</string>
    <string name="added_to_home_screen">Added to Home screen</string>
    <string name="developer_tools">Developer tools</string>
    <string name="developer_tools_subtitle">Inspect elements, console, network</string>
    <string name="site_protection_title">Site Protection</string>
    <string name="protection_for_site">Protection for %s</string>
    <string name="protection_active">Protection Active</string>
    <string name="protection_paused">Protection Paused</string>
    <string name="disable_adblock_for_this_site">Disable adblocker for this site only</string>
    <string name="disable_adblock_desc">Allow ads, trackers, and unblock network requests on this domain</string>
    <string name="site_shield_settings_button">Global Adblocker Settings</string>
    <string name="shields_up">Shields UP</string>
    <string name="shields_up_desc">Blocking ads, trackers, and other threats</string>
    <string name="shields_down">Shields DOWN</string>
    <string name="shields_down_desc">Protection paused for this site</string>
    <string name="trackers_blocked_label">TRACKERS &amp; ADS BLOCKED</string>
    <string name="blocked_all_time">all time</string>
    <string name="blocking_level_title">Ad &amp; Tracker Blocking</string>
    <string name="blocking_level_desc">Standard blocks 3rd-party · Aggressive blocks all</string>
    <string name="blocking_standard">Standard</string>
    <string name="blocking_aggressive">Aggressive</string>
    <string name="fingerprint_protection_title">Fingerprint Protection</string>
    <string name="fingerprint_protection_desc">Randomise browser APIs to prevent cross-site tracking</string>
    <string name="https_upgrade_title">Upgrade Connections to HTTPS</string>
    <string name="https_upgrade_desc">Auto-upgrade insecure http:// links to https://</string>
    <string name="script_blocking_title">Block Scripts</string>
    <string name="script_blocking_desc">Block JavaScript on this site (may break pages)</string>
    <string name="pref_blocking_level_title">Blocking Level</string>
    <string name="pref_blocking_level_desc">Standard (3rd-party) or Aggressive (all ads)</string>
    <string name="pref_fingerprint_title">Fingerprint Protection</string>
    <string name="pref_fingerprint_desc">Randomise Canvas, WebGL and other fingerprint APIs</string>
    <string name="pref_https_upgrade_title">Upgrade to HTTPS</string>
    <string name="pref_https_upgrade_desc">Automatically upgrade HTTP connections to HTTPS</string>
    <string name="find_in_page_hint">Find in page…</string>
    <string name="no_matches">0/0</string>
    <string name="matches_count">%1$d/%2$d</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="edit_shortcut">Edit Shortcut</string>
    <string name="delete_shortcut">Delete Shortcut</string>
    <string name="manage_shortcuts">Manage Shortcuts</string>
    <string name="shortcut_title">Title</string>
    <string name="shortcut_url">URL</string>
    <string name="shortcut_title_hint">e.g. YouTube</string>
    <string name="shortcut_url_hint">e.g. https://youtube.com</string>
    <string name="shortcut_added">Shortcut added</string>
    <string name="shortcut_updated">Shortcut updated</string>
    <string name="shortcut_deleted">Shortcut deleted</string>
    <string name="save">Save</string>
    <string name="save_this_page">Save this page</string>
    <string name="save_page_dialog_title">Save Page</string>
    <string name="save_as_web_archive">Save as Web Archive (.mht)</string>
    <string name="save_as_pdf">Save as PDF (.pdf)</string>
    <string name="print_system_option">Print / System Print…</string>
    <string name="add">Add</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="adjust_quick_actions">Adjust Action Buttons</string>
    <string name="adjust_quick_actions_hint">Drag buttons on homepage or use arrows below to customize button positions.</string>
    <string name="reset_order">Reset Default</string>
    <string name="custom_rules_title">Custom Filter Rules</string>
    <string name="custom_rules_desc">Add your own Adblock/uBlock rules (one per line)</string>
    <string name="custom_rules_hint">e.g. ##.ad-banner\n||example.com^</string>
    <string name="shortcut_incognito_short">Incognito</string>
    <string name="shortcut_incognito_long">New Incognito Tab</string>
    <string name="shortcut_search_short">Search</string>
    <string name="shortcut_search_long">Search Web</string>
    <string name="shortcut_qr_short">Scan QR</string>
    <string name="shortcut_qr_long">Scan QR Code</string>
    <string name="edit_bookmark">Edit Bookmark</string>
    <string name="bookmark_name">Name</string>
    <string name="bookmark_url">URL</string>
</resources>