<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_incognito"
        android:enabled="true"
        android:icon="@drawable/ic_incognito"
        android:shortcutShortLabel="@string/shortcut_incognito_short"
        android:shortcutLongLabel="@string/shortcut_incognito_long">
        <intent
            android:action="com.onyx.browser.action.NEW_INCOGNITO_TAB"
            android:targetPackage="com.onyx.browser"
            android:targetClass="com.onyx.browser.MainActivity" />
    </shortcut>
    
    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.onyx.browser.action.SEARCH"
            android:targetPackage="com.onyx.browser"
            android:targetClass="com.onyx.browser.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_qr"
        android:enabled="true"
        android:icon="@drawable/ic_qr_code"
        android:shortcutShortLabel="@string/shortcut_qr_short"
        android:shortcutLongLabel="@string/shortcut_qr_long">
        <intent
            android:action="com.onyx.browser.action.SCAN_QR"
            android:targetPackage="com.onyx.browser"
            android:targetClass="com.onyx.browser.MainActivity" />
    </shortcut>
</shortcuts>
